@@ -1,6 +1,7 @@
-Changelog as of November 30, 2011:
+Changelog as of December 1, 2011:
 == Version 2.0 ==
 * Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
+* Changed `my_theme_data` to `active_theme_data` to be more descriptive in `BNS Theme Version`
 * Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
 * Updated documentation to clarify `BNS Dynamic Copyright` parameters
 
